# StreamRAG

./: LICENSE  README.md  SETUP.md
.claude-plugin/: marketplace.json
agents/: graph-analyzer.md
benchmarks/: benchmark_real.py  compare_with_without.py  real_claude_benchmark.py  real_claude_benchmark.sh
commands/: streamrag.md
hooks/: hooks.json
paper/: streamrag.tex
plugins/streamrag/: .gitignore  README.md  pyproject.toml
plugins/streamrag/.claude-plugin/: plugin.json
plugins/streamrag/commands/: streamrag-ask.md  streamrag-context.md
plugins/streamrag/hooks/scripts/: on_file_change.py  pre_compact.py  pre_read_context.py
plugins/streamrag/paper/: README.md  streamrag.aux  streamrag.out
plugins/streamrag/scripts/: dump_graph.py  init_graph.py
plugins/streamrag/streamrag/: classify.py  extractor.py
plugins/streamrag/streamrag/agent/: __init__.py
plugins/streamrag/streamrag/languages/: c.py  cpp.py  java.py  regex_base.py  registry.py  rust.py
plugins/streamrag/streamrag/storage/: __init__.py
plugins/streamrag/streamrag/v2/: bounded_propagator.py  debouncer.py
plugins/streamrag/tests/: conftest.py  test_auto_init.py  test_c_extractor.py  test_daemon.py  test_integration.py  test_javascript_extractor.py  test_regex_base.py  test_storage.py
plugins/streamrag/tests/v2/: test_bounded_propagator.py  test_debouncer.py  test_hierarchical_graph.py  test_semantic_path.py  test_shadow_ast.py
scripts/: query_graph.py
streamrag/: __init__.py  bridge.py  daemon.py  daemon_client.py  graph.py  models.py  smart_query.py
tests/: test_bridge.py  (+22 more)
(+26 files in other folders)
